--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Time tracking dashboard</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <!-- style file-->
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
+<main>
+  <section>
+    <article>
+      <img src="./images/image-jeremy.png" alt="profile-pic">
+      <div class="profile">
+        <p>Report for</p> 
+        <h2>Jeremy Robson</h2>
+      </div>
+    </article>
+    <ul>
+      <li>Daily</li> 
+      <li>Weekly</li> 
+      <li>Monthly</li> 
+    </ul>
+  </section>
 
   Work
   5hrs <!-- daily -->
@@ -71,10 +77,6 @@
   7hrs <!-- monthly -->
   Previous - 11hrs <!-- monthly -->
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</main>
 </body>
 </html>
