completed css design

--- a/index.html
+++ b/index.html
@@ -14,68 +14,106 @@
 </head>
 <body>
 <main>
-  <section>
-    <article>
-      <img src="./images/image-jeremy.png" alt="profile-pic">
-      <div class="profile">
-        <p>Report for</p> 
-        <h2>Jeremy Robson</h2>
+  <div class="container">
+    <section id="profile">
+      <article>
+        <img src="./images/image-jeremy.png" alt="profile-pic">
+        <div class="profile">
+          <p>Report for</p>
+          <h2>Jeremy Robson</h2>
+        </div>
+      </article>
+      <ul>
+        <li>Daily</li>
+        <li>Weekly</li>
+        <li>Monthly</li>
+      </ul>
+    </section>
+    <section class="card card-img work">
+      <div class="time">
+        <div class="activity">
+         <p>Work</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">32hrs</p>
+          <p class="worked">Last Week - 36hrs</p>
+        </div>
       </div>
-    </article>
-    <ul>
-      <li>Daily</li> 
-      <li>Weekly</li> 
-      <li>Monthly</li> 
-    </ul>
-  </section>
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
+    </section>
+    <section class="card card-img play">
+      <div class="time">
+        <div class="activity">
+         <p>Play</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">10hrs</p>
+          <p class="worked">Last Week - 8hrs</p>
+        </div>
+      </div>
+    </section>
+    <section class="card card-img study">
+      <div class="time">
+        <div class="activity">
+         <p>Study</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">4hrs</p>
+          <p class="worked">Last Week - 7hrs</p>
+        </div>
+      </div>
+    </section>
+    <section class="card card-img exercise">
+      <div class="time">
+        <div class="activity">
+         <p>Study</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">4hrs</p>
+          <p class="worked">Last Week - 5hrs</p>
+        </div>
+      </div>
+    </section>
+    <section class="card card-img social">
+      <div class="time">
+        <div class="activity">
+         <p>Study</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">5hrs</p>
+          <p class="worked">Last Week - 10hrs</p>
+        </div>
+      </div>
+    </section>
+    <section class="card card-img selfcare">
+      <div class="time">
+        <div class="activity">
+         <p>Study</p>
+         <div>
+           <img src="./images/icon-ellipsis.svg" alt="threedots">
+         </div>
+        </div>
+        <div class="timings">
+          <p class="hrs">2hrs</p>
+          <p class="worked">Last Week - 2hrs</p>
+        </div>
+      </div>
+    </section>
+  </div>
 
 </main>
 </body>
