--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
       </article>
       <ul>
-        <li>Daily</li>
-        <li>Weekly</li>
-        <li>Monthly</li>
+        <li><a href="#"onclick="clicked()">Daily</a></li>
+        <li><a href="#" class="white" onclick="clicked()">Weekly</a></li>
+        <li><a href="#" onclick="clicked()">Monthly</a></li>
       </ul>
     </section>
     <section class="card card-img work">
@@ -74,7 +74,7 @@
     <section class="card card-img exercise">
       <div class="time">
         <div class="activity">
-         <p>Study</p>
+         <p>Exercise</p>
          <div>
            <img src="./images/icon-ellipsis.svg" alt="threedots">
          </div>
@@ -88,7 +88,7 @@
     <section class="card card-img social">
       <div class="time">
         <div class="activity">
-         <p>Study</p>
+         <p>Social</p>
          <div>
            <img src="./images/icon-ellipsis.svg" alt="threedots">
          </div>
@@ -102,7 +102,7 @@
     <section class="card card-img selfcare">
       <div class="time">
         <div class="activity">
-         <p>Study</p>
+         <p>Self Care</p>
          <div>
            <img src="./images/icon-ellipsis.svg" alt="threedots">
          </div>
@@ -114,7 +114,7 @@
       </div>
     </section>
   </div>
-
+ <script src="./Js/script.js"></script>
 </main>
 </body>
 </html>
